<?xml version="1.0"?>
<package>
  <name>pioneer_teleop</name>
  <version>1.3.0</version>

  <description>The pioneer_teleop package provides teleoperation using keyboard, sockets or command line for the Adept MobileRobots Pioneer and Pioneer-compatible robots (Including Pioneer 2, Pioneer 3, Pioneer LX, AmigoBot, PeopleBot, PatrolBot, PowerBot, Seekur and Seekur Jr.).
  </description>

  <author email="bendahmane.amine@gmail.com">Amine BENDAHMANE</author>
  <maintainer email="bendahmane.amine@gmail.com">Amine BENDAHMANE</maintainer>

  <license>ISC</license>

  <url type="website">http://wiki.ros.org/pioneer_teleop</url>
  <url type="repository">https://github.com/amineHorseman/pioneer_teleop</url>
  <url type="bugtracker">https://github.com/amineHorseman/pioneer_teleop/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosaria</run_depend>
  <run_depend>pioneer_bringup</run_depend>

</package>